Fixed div alignment/padding

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -60,8 +60,8 @@ header {
 
 .main-description{
   background-color: $white;
+  padding: 1rem 1rem;
   margin: 5% auto;
-  padding: 1rem;
   position: relative;
   border: solid 1.5px black;
   border-radius: 5px;
@@ -72,7 +72,6 @@ header {
 }
 
 .mainview {
-  padding: 2rem 2rem ;
   min-height: 90vh;
 }
 
@@ -239,7 +238,7 @@ p, li {
 button {
   display: block;
   margin-top: 1%;
-  margin-left: 1.2em;
+  margin-left: 1.3em;
   margin-bottom: 3em;
 }
 
